test/files/neg/reflection-names-neg.check
reflection-names-neg.scala:5: error: type mismatch;
 found   : "abc".type (with underlying type String)
 required: reflect.runtime.universe.Name
Note that implicit conversions are not applicable because they are ambiguous:
 both method stringToTermName in trait Names of type (s: String)reflect.runtime.universe.TermName
 and method stringToTypeName in trait Names of type (s: String)reflect.runtime.universe.TypeName
 are possible conversion functions from "abc".type to reflect.runtime.universe.Name
  val x2 = ("abc": Name) drop 1         // error
            ^
reflection-names-neg.scala:5: error: value drop is not a member of reflect.runtime.universe.Name
  val x2 = ("abc": Name) drop 1         // error
                         ^
two errors found
